--- a/frontend/track.html
+++ b/frontend/track.html
@@ -7,13 +7,27 @@
     <title>LUXE BERLIN | Bestellverfolgung</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="track.css">
+    <style>
+        /* Mobil AOS Güvenlik Duvarı */
+        @media (max-width: 768px) {
+            [data-aos] {
+                opacity: 1 !important;
+                transform: none !important;
+                transition: none !important;
+            }
+        }
+    </style>
 </head>
 
 <body>
+    <audio id="notificationSound" src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3"
+        preload="auto"></audio>
+
     <div id="preloader">
         <div class="preloader-content">
             <div class="preloader-logo">LUXE<span>BERLIN</span></div>
@@ -45,7 +59,7 @@
                     <div id="cancel-section" class="d-none mt-2 mb-4">
                         <p class="small text-muted mb-2">Möchten Sie diese Bestellung stornieren?</p>
                         <button class="btn btn-outline-danger btn-sm rounded-pill px-4"
-                            onclick="cancelOrderRequest()">Bestellung Stornieren</button>
+                            onclick="openCancelModal()">Bestellung Stornieren</button>
                     </div>
 
                     <div id="track-result" class="d-none mt-5 result-animation">
@@ -85,6 +99,27 @@
                             </div>
                         </div>
                         <p class="mt-5 small text-muted italic">Vielen Dank für Ihr Vertrauen in LUXE BERLIN! ✨</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="cancelConfirmModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content border-0 shadow-lg rounded-4 overflow-hidden">
+                <div class="modal-body p-5 text-center">
+                    <div class="cancel-icon-circle mx-auto mb-4">
+                        <i class="fas fa-exclamation-triangle fa-2x"></i>
+                    </div>
+                    <h3 class="fw-bold mb-3" style="font-family: 'Playfair Display';">Stornieren?</h3>
+                    <p class="text-muted mb-4">Sind Sie sicher, dass Sie diese Bestellung stornieren möchten? Dieser
+                        Vorgang kann nicht rückgängig gemacht werden.</p>
+                    <div class="d-flex gap-3">
+                        <button type="button" class="btn btn-light w-100 rounded-pill fw-bold"
+                            data-bs-dismiss="modal">Abbrechen</button>
+                        <button type="button" class="btn btn-danger w-100 rounded-pill fw-bold shadow-sm"
+                            onclick="executeCancellation()">Ja, Stornieren</button>
                     </div>
                 </div>
             </div>
